Added next jses to project

--- a/src/main/resources/templates/mainPages/index.html
+++ b/src/main/resources/templates/mainPages/index.html
@@ -446,9 +446,9 @@
   <script th:src="@{/js/jquery.min.js}"></script>
   <script th:src="@{/js/popper.min.js}"></script>
   <script th:src="@{/js/bootstrap.min.js}"></script>
-  <script src="../assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-  <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+  <script th:src="@{/js/perfect-scrollbar.jquery.min.js}"></script>
+  <script th:src="@{/js/chartjs.min.js}"></script>
+  <script th:src="@{/js/bootstrap-notify.js}"></script>
 </body>
 
 </html>
