Next added fonts to fonts folder

--- a/src/main/resources/templates/mainPages/index.html
+++ b/src/main/resources/templates/mainPages/index.html
@@ -1026,7 +1026,7 @@
   <script th:src="@{/js/mainPage/slick.min.js}"></script>
   <script th:src="@{/js/mainPage/slick-animation.min.js}"></script>
   <!-- Color box -->
-  <script th:src="@{/js/mainPage/jquery.colorbox.min.js}"></script>
+  <script th:src="@{/js/mainPage/jquery.colorbox.js}"></script>
   <!-- shuffle -->
   <script th:src="@{/js/mainPage/shuffle.min.js}" defer></script>
 
