Changed pictures in slider

--- a/src/main/resources/templates/mainPages/index.html
+++ b/src/main/resources/templates/mainPages/index.html
@@ -157,13 +157,13 @@
 <!--/ Header end -->
 
 <div class="banner-carousel banner-carousel-1 mb-0">
-  <div class="banner-carousel-item" th:style="'background-image:url(' + @{/images/slider-main/2LP.jpg} + ')">
+  <div class="banner-carousel-item" th:style="'background-image:url(' + @{/images/slider-main/bg1.jpg} + ');'">
     <div class="slider-content">
         <div class="container h-100">
           <div class="row align-items-center h-100">
               <div class="col-md-12 text-center">
-                <h2 class="slide-title" data-animation-in="slideInLeft">17 Years of excellence in</h2>
-                <h3 class="slide-sub-title" data-animation-in="slideInRight">Construction Industry</h3>
+                <h2 class="slide-title" data-animation-in="slideInLeft">30 Years Of Excellence in</h2>
+                <h3 class="slide-sub-title" data-animation-in="slideInRight">Car Repairing</h3>
                 <p data-animation-in="slideInLeft" data-duration-in="1.2">
                     <a href="services.html" class="slider btn btn-primary">Our Services</a>
                     <a href="contact.html" class="slider btn btn-primary border">Contact Now</a>
@@ -174,14 +174,14 @@
     </div>
   </div>
 
-  <div class="banner-carousel-item" style="background-image:url(images/slider-main/bg2.jpg)">
+  <div class="banner-carousel-item" th:style="'background-image:url(' + @{/images/slider-main/bg2.jpg} + ');'">
     <div class="slider-content text-left">
         <div class="container h-100">
           <div class="row align-items-center h-100">
               <div class="col-md-12">
-                <h2 class="slide-title-box" data-animation-in="slideInDown">World Class Service</h2>
-                <h3 class="slide-title" data-animation-in="fadeIn">When Service Matters</h3>
-                <h3 class="slide-sub-title" data-animation-in="slideInLeft">Your Choice is Simple</h3>
+                <h2 class="slide-title-box" data-animation-in="slideInDown">The Best Quality</h2>
+                <h3 class="slide-title" style="color: white" data-animation-in="fadeIn">We Uses Only</h3>
+                <h3 class="slide-sub-title" style="color: orange" data-animation-in="slideInLeft">The Best Quality Parts</h3>
                 <p data-animation-in="slideInRight">
                     <a href="services.html" class="slider btn btn-primary border">Our Services</a>
                 </p>
@@ -191,7 +191,7 @@
     </div>
   </div>
 
-  <div class="banner-carousel-item" style="background-image:url(images/slider-main/bg3.jpg)">
+  <div class="banner-carousel-item" th:style="'background-image:url(' + @{/images/slider-main/bg3.jpg} + ');'">
     <div class="slider-content text-right">
         <div class="container h-100">
           <div class="row align-items-center h-100">
