--- a/src/main/resources/templates/mainPages/index.html
+++ b/src/main/resources/templates/mainPages/index.html
@@ -1,129 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head>
-
-  <meta charset="utf-8">
-  <title>Car Worhshop Manager</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Car Workhop Manager">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-
-  <!-- Favicon
-================================================== -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
-
-  <!-- CSS
-================================================== -->
-  <!-- Bootstrap -->
-  <link rel="stylesheet" th:href="@{/css/mainPage/bootstrap.min.css}">
-  <!-- FontAwesome -->
-  <link rel="stylesheet" th:href="@{/css/mainPage/fontawesome/all.min.css}">
-  <!-- Animation -->
-  <link rel="stylesheet" th:href="@{/css/mainPage/animate.css}">
-  <!-- slick Carousel -->
-  <link rel="stylesheet" th:href="@{/css/mainPage/slick/slick.css}">
-  <link rel="stylesheet" th:href="@{/css/mainPage/slick/slick-theme.css}">
-  <!-- Colorbox -->
-  <link rel="stylesheet" th:href="@{/css/mainPage/colorbox/colorbox.css}">
-  <!-- Template styles-->
-  <link rel="stylesheet" th:href="@{/css/mainPage/style.css}">
-
-</head>
+<head th:include="/header :: head"></head>
 <body>
-  <div class="body-inner">
-<!-- Header start -->
-<header id="header" class="header-one">
-  <div class="bg-white">
-    <div class="container" >
-      <div class="logo-area">
-          <div class="row align-items-center justify-content-center">
-            <div class="logo col-lg-3 text-center text-lg-left mb-3 mb-md-5 mb-lg-0">
-                <a class="d-block" href="index.html">
-                    <h4>Car Workshop Manager</h4>
-                </a>
-            </div><!-- logo end -->
-  
-            <div class="col-lg-4 header-left">
-                <ul class="top-info-box">
-                  <li>
-                    <div class="info-box">
-                      <div class="info-box-content">
-                          <p class="info-box-title">Call Us</p>
-                          <p class="info-box-subtitle">(+48) 999-999-999</p>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="info-box">
-                      <div class="info-box-content">
-                          <p class="info-box-title">Email Us</p>
-                          <p class="info-box-subtitle">cwm@email.com</p>
-                      </div>
-                    </div>
-                  </li>
-                </ul><!-- Ul end -->
-            </div><!-- header right end -->
-          </div><!-- logo area end -->
-  
-      </div><!-- Row end -->
-    </div><!-- Container end -->
-  </div>
-
-  <div class="site-navigation">
-    <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-              <nav class="navbar navbar-expand-lg navbar-dark p-0 justify-content-center">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                
-                <div id="navbar-collapse" class="collapse navbar-collapse justify-content-center">
-                    <ul class="nav navbar-nav mr-auto justify-content-center            ">
-                        <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
-
-                      <li class="nav-item dropdown">
-                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Company <i class="fa fa-angle-down"></i></a>
-                          <ul class="dropdown-menu" role="menu">
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="team.html">Our People</a></li>
-                            <li><a href="testimonials.html">Testimonials</a></li>
-                            <li><a href="faq.html">Faq</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
-                          </ul>
-                      </li>
-              
-                      <li class="nav-item dropdown">
-                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Projects <i class="fa fa-angle-down"></i></a>
-                          <ul class="dropdown-menu" role="menu">
-                            <li><a href="projects.html">Projects All</a></li>
-                            <li><a href="projects-single.html">Projects Single</a></li>
-                          </ul>
-                      </li>
-              
-                      <li class="nav-item dropdown">
-                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services <i class="fa fa-angle-down"></i></a>
-                          <ul class="dropdown-menu" role="menu">
-                            <li><a href="services.html">Services All</a></li>
-                            <li><a href="service-single.html">Services Single</a></li>
-                          </ul>
-                      </li>
-              
-                      <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-              </nav>
-          </div>
-          <!--/ Col end -->
-        </div>
-        <!--/ Row end -->
-    </div>
-    <!--/ Container end -->
-
-  </div>
-  <!--/ Navigation end -->
-</header>
-<!--/ Header end -->
+<span th:replace="/header :: header"></span>
 
 <div class="banner-carousel banner-carousel-1 mb-0">
   <div class="banner-carousel-item" th:style="'background-image:url(' + @{/images/slider-main/bg1.jpg} + ');'">
@@ -521,73 +400,7 @@
   <!--/ Container end -->
 </section><!-- Project area end -->
 
-  <footer id="footer" class="footer bg-overlay">
-    <div class="footer-main">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-4 col-md-6 footer-widget footer-about">
-            <h3 class="widget-title">About Us</h3>
-            <img loading="lazy" class="footer-logo" src="images/footer-logo.png" alt="Constra">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci done idunt ut
-              labore et dolore magna aliqua.</p>
-          </div><!-- Col end -->
-
-          <div class="col-lg-4 col-md-6 footer-widget mt-5 mt-md-0">
-            <h3 class="widget-title">Working Hours</h3>
-            <div class="working-hours">
-              We work 7 days a week, every day excluding major holidays. Contact us if you have an emergency, with our
-              Hotline and Contact form.
-              <br><br> Monday - Friday: <span class="text-right">10:00 - 16:00 </span>
-              <br> Saturday: <span class="text-right">12:00 - 15:00</span>
-              <br> Sunday and holidays: <span class="text-right">09:00 - 12:00</span>
-            </div>
-          </div><!-- Col end -->
-        </div><!-- Row end -->
-      </div><!-- Container end -->
-    </div><!-- Footer main end -->
-
-    <div class="copyright">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-6">
-            <div class="copyright-info">
-              <span>Copyright &copy; <script>
-                  document.write(new Date().getFullYear())
-                </script>, Designed &amp; Developed by <a href="https://themefisher.com">Themefisher</a></span>
-            </div>
-          </div>
-        </div><!-- Row end -->
-
-        <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top position-fixed">
-          <button class="btn btn-primary" title="Back to Top">
-            <i class="fa fa-angle-double-up"></i>
-          </button>
-        </div>
-
-      </div><!-- Container end -->
-    </div><!-- Copyright end -->
-  </footer><!-- Footer end -->
-
-
-  <!-- Javascript Files
-  ================================================== -->
-
-  <!-- initialize jQuery Library -->
-  <script th:src="@{/js/mainPage/jquery.min.js}"></script>
-  <!-- Bootstrap jQuery -->
-  <script th:src="@{/js/mainPage/bootstrap.min.js}" defer></script>
-  <!-- Slick Carousel -->
-  <script th:src="@{/js/mainPage/slick.min.js}"></script>
-  <script th:src="@{/js/mainPage/slick-animation.min.js}"></script>
-  <!-- Color box -->
-  <script th:src="@{/js/mainPage/jquery.colorbox.js}"></script>
-  <!-- shuffle -->
-  <script th:src="@{/js/mainPage/shuffle.min.js}" defer></script>
-
-  <!-- Template custom -->
-  <script th:src="@{/js/mainPage/script.js}"></script>
-
-  </div><!-- Body inner end -->
+<span th:replace="/footer :: footer"></span>
   </body>
 
   </html>
