--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -9,9 +9,8 @@
             <div class="row justify-content-between">
                 <div class="col-lg-4 col-md-6 footer-widget footer-about">
                     <h3 class="widget-title">About Us</h3>
-                    <img loading="lazy" class="footer-logo" src="images/footer-logo.png" alt="Constra">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci done idunt ut
-                        labore et dolore magna aliqua.</p>
+                    <h4 style="color:white;">Car Workshop Manager</h4>
+                    <p>We are a network of car repair shops throughout the country. We focus on: quality of services, customer satisfaction and speed of action. Our success is your success!</p>
                 </div><!-- Col end -->
 
                 <div class="col-lg-4 col-md-6 footer-widget mt-5 mt-md-0">
