Changed 'about us' and 'our values' section

--- a/src/main/resources/templates/mainPages/index.html
+++ b/src/main/resources/templates/mainPages/index.html
@@ -81,10 +81,8 @@
         <div class="col-lg-6">
           <div class="ts-intro">
               <h2 class="into-title">About Us</h2>
-              <h3 class="into-sub-title">We deliver landmark projects</h3>
-              <p>We are rethoric question ran over her cheek When she reached the first hills of the Italic Mountains,
-                she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village
-                and the subline of her own road, the Line Lane.</p>
+              <h3 class="into-sub-title">We deliver the highest quality of repairs</h3>
+              <p>We employ qualified employees who undergo multi-stage recruitment. In addition, the car parts we use come from the largest suppliers offering OE quality. Thanks to this, we are able to provide the highest quality of repairs.</p>
           </div><!-- Intro box end -->
 
           <div class="gap-20"></div>
@@ -140,21 +138,21 @@
 
         <div class="col-lg-6 mt-4 mt-lg-0">
           <h3 class="into-sub-title">Our Values</h3>
-          <p>Minim Austin 3 wolf moon scenester aesthetic, umami odio pariatur bitters. Pop-up occaecat taxidermy street art, tattooed beard literally.</p>
+          <p>Here are the three main principles we follow:</p>
 
           <div class="accordion accordion-group" id="our-values-accordion">
               <div class="card">
                 <div class="card-header p-0 bg-transparent" id="headingOne">
                     <h2 class="mb-0">
                       <button class="btn btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                          Safety
+                        Quality
                       </button>
                     </h2>
                 </div>
               
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#our-values-accordion">
                     <div class="card-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidata
+                        Our skilled workers only use the highest quality parts.
                     </div>
                 </div>
               </div>
@@ -168,7 +166,7 @@
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#our-values-accordion">
                     <div class="card-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidata
+                        Our employees ensure the highest quality of customer service at every stage of the order.
                     </div>
                 </div>
               </div>
@@ -176,13 +174,13 @@
                 <div class="card-header p-0 bg-transparent" id="headingThree">
                     <h2 class="mb-0">
                       <button class="btn btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          Integrity
+                          Development
                       </button>
                     </h2>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#our-values-accordion">
                     <div class="card-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidata
+                        Our employees constantly improve their qualifications. We organize all kinds of courses and training for them.
                     </div>
                 </div>
               </div>
