--- a/src/main/resources/templates/mainPages/appointment.html
+++ b/src/main/resources/templates/mainPages/appointment.html
@@ -38,33 +38,120 @@
 
     <div class="row">
       <div class="col-md-12">
-        <form id="contact-form" action="#" method="post" role="form">
+        <form id="contact-form" th:action="@{/appointment}" method="post" role="form">
           <div class="error-container"></div>
-          <div class="row">
-            <div class="col-md-4">
+          <div class="row text-center">
+            <div class="col-12">
+              <h3>Visit</h3>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-md-3" >
               <div class="form-group">
-                <label>Name</label>
-                <input class="form-control form-control-name" name="name" id="name" placeholder="" type="text" required>
+                <label>Visit Date</label>
+                <input th:field="*{visit.visitDate}" type="date" class="form-control form-control-name">
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
               <div class="form-group">
-                <label>Email</label>
-                <input class="form-control form-control-email" name="email" id="email" placeholder="" type="email"
-                  required>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="form-group">
-                <label>Subject</label>
-                <input class="form-control form-control-subject" name="subject" id="subject" placeholder="" required>
+                <label>Visit Time</label>
+                <input th:field="*{visit.visitTime}" type="time" class="form-control form-control-name">
               </div>
             </div>
           </div>
+          <div class="row text-center" >
+            <div class="col-12">
+              <h3>Person</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <div class="form-group">
+                <label>First name</label>
+                <input th:field="*{user.firstName}" type="text" class="form-control form-control-name">
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="form-group">
+                <label>Last name</label>
+                <input th:field="*{user.lastName}" type="text" class="form-control form-control-email">
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="form-group">
+                <label>Phone number</label>
+                <input th:field="*{user.phoneNumber}" type="text" class="form-control form-control-subject">
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="form-group">
+                <label>Email</label>
+                <input th:field="*{user.email}" type="text" class="form-control form-control-name">
+              </div>
+            </div>
+          </div>
+          <div class="row text-center">
+            <div class="col-12">
+              <h3>Car</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Brand</label>
+                <input th:field="*{car.brand}" type="text" class="form-control form-control-name">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Model</label>
+                <input th:field="*{car.model}" type="text" class="form-control form-control-name">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Production Year</label>
+                <input th:field="*{car.productionYear}" type="text" class="form-control form-control-name">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Engine type</label>
+                <input th:field="*{car.engineType}" class="form-control form-control-name">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Engine Capacity</label>
+                <input th:field="*{car.engineCapacity}" type="text" class="form-control form-control-name">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Engine Power</label>
+                <input th:field="*{car.enginePower}" type="text" class="form-control form-control-name">
+              </div>
+            </div>
+          </div>
+          <div class="row text-center">
+            <div class="col-12">
+              <h3>Tasks</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4" th:each="task : ${allTasks}">
+              <div class="form-check" >
+                  <input class="form-check-input" type="checkbox" name="selectedTasks" th:value="${task.getId()}" id="flexCheckDefault">
+                  <label class="form-check-label" th:text="${task.getDescription()}" for="flexCheckDefault"></label>
+              </div>
+            </div>
+          </div>
+          <br>
           <div class="form-group">
-            <label>Message</label>
-            <textarea class="form-control form-control-message" name="message" id="message" placeholder="" rows="10"
-              required></textarea>
+            <label>More Informations</label>
+            <textarea class="form-control form-control-message" th:field="*{order.moreInformation}" placeholder="" rows="4"></textarea>
           </div>
           <div class="text-right"><br>
             <button class="btn btn-primary solid blank" type="submit">Send Message</button>
