--- a/src/main/resources/templates/mainPages/appointment.html
+++ b/src/main/resources/templates/mainPages/appointment.html
@@ -154,7 +154,7 @@
             <textarea class="form-control form-control-message" th:field="*{order.moreInformation}" placeholder="" rows="4"></textarea>
           </div>
           <div class="text-right"><br>
-            <button class="btn btn-primary solid blank" type="submit">Send Message</button>
+            <button class="btn btn-primary solid blank" type="submit">Submit</button>
           </div>
         </form>
       </div>
