--- a/src/main/resources/templates/mainPages/appointmentDate.html
+++ b/src/main/resources/templates/mainPages/appointmentDate.html
@@ -55,7 +55,7 @@
             <div class="col-md-3">
               <div class="form-group">
                 <label>Choose Workshop</label>
-                <select name="workshop" id="workshop" class="form-control form-control-name">
+                <select name="selectedWorkshop" id="selectedWorkshop" class="form-control form-control-name">
                   <option th:each="workshop : ${workshopList}" th:value="${workshop.getId()}" th:text="${workshop.getCity() + ', ' + workshop.street + ' ' + workshop.number}"></option>
                 </select>
               </div>
