Appointment date form works fine

--- a/src/main/resources/templates/mainPages/appointmentDate.html
+++ b/src/main/resources/templates/mainPages/appointmentDate.html
@@ -49,7 +49,7 @@
             <div class="col-md-3" >
               <div class="form-group">
                 <label>Choose visit Date</label>
-                <input th:field="*{visitDate.date}" type="date" class="form-control form-control-name">
+                <input id="selectedDate" name="selectedDate" type="date" class="form-control form-control-name">
               </div>
             </div>
             <div class="col-md-3">
