Added Car, Order and User Repository

--- a/src/main/resources/templates/mainPages/appointmentDate.html
+++ b/src/main/resources/templates/mainPages/appointmentDate.html
@@ -48,7 +48,7 @@
           <div class="row justify-content-center">
             <div class="col-md-3" >
               <div class="form-group">
-                <label>Choose visit Date</label>
+                <label>Choose Visit Date</label>
                 <input id="selectedDate" name="selectedDate" type="date" class="form-control form-control-name">
               </div>
             </div>
