--- a/src/main/resources/templates/mainPages/appointmentDate.html
+++ b/src/main/resources/templates/mainPages/appointmentDate.html
@@ -49,7 +49,9 @@
             <div class="col-md-3" >
               <div class="form-group">
                 <label>Choose Visit Date</label>
-                <input id="selectedDate" name="selectedDate" type="date" class="form-control form-control-name">
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+                <input type="date" id="txtDate" name="selectedDate" class="form-control form-control-name"/>
+<!--                <input id="selectedDate" name="selectedDate" type="date" class="form-control form-control-name">-->
               </div>
             </div>
             <div class="col-md-3">
@@ -70,6 +72,29 @@
     </div><!-- Content row -->
   </div><!-- Conatiner end -->
 </section><!-- Main container end -->
+
+<script>$(function(){
+  var dtToday = new Date();
+
+  var month = dtToday.getMonth() + 1;
+  var day = dtToday.getDate();
+  var hour = dtToday.getHours()
+  var year = dtToday.getFullYear();
+  if(month < 10)
+    month = '0' + month.toString();
+  if(day < 10)
+    day = '0' + day.toString();
+  if(hour > 14)
+    day = day + 1;
+
+  var maxDate = year + '-' + month + '-' + day;
+
+  // or instead:
+  // var maxDate = dtToday.toISOString().substr(0, 10);
+
+  $('#txtDate').attr('min', maxDate);
+});</script>
+
 
 <span th:replace="/footer :: footer"></span>
   </body>
