--- a/src/main/resources/templates/mainPages/appointmentDate.html
+++ b/src/main/resources/templates/mainPages/appointmentDate.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
-<head th:include="/header :: head"></head>
+<head th:include="/mainPages/header :: head"></head>
 <body>
 
-<span th:replace="/header :: header"></span>
+<span th:replace="/mainPages/header :: header"></span>
 
 <div id="banner-area" class="banner-area" th:style="'background-image:url(' + @{/images/banner/banner1.jpg} + ');'">
   <div class="banner-text">
@@ -96,7 +96,7 @@
 });</script>
 
 
-<span th:replace="/footer :: footer"></span>
+<span th:replace="/mainPages/footer :: footer"></span>
   </body>
 
   </html>
