--- a/src/main/resources/templates/dashboardPages/visits.html
+++ b/src/main/resources/templates/dashboardPages/visits.html
@@ -10,7 +10,7 @@
       <div class="panel-header">
         <h1 th:text="'Car Workshop Manager'" style="text-align: center; color: white"></h1>
           <br>
-          <h2 th:text="${'Hi ' + session.userName + ' !'}" style="text-align: center; color: white"></h2>
+          <h2 th:text="'Visits'" style="text-align: center; color: white"></h2>
       </div>
       <div class="content" style="background: -webkit-gradient(linear, left top, right top, from(#0c2646), color-stop(60%, #204065), to(#2a5788));">
           <div class="row">
@@ -20,7 +20,7 @@
               <div class="col-md-12">
                   <div class="card">
                       <div class="card-header">
-                          <h4 class="card-title">Last Visits</h4>
+                          <h4 class="card-title">Visits</h4>
                       </div>
                       <div class="card-body">
                           <div class="table-responsive">
